2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h (__attribute__): Remove define.

2007-02-06  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (fastjar_CPPFLAGS): Removed.
	(grepjar_SOURCES) Added shift.c and shift.h.

	* compress.c (seekable, end_of_entries): Removed.
	(write_data) Removed __attribute__((unused)).
	Removed WITH_SHIFT_DOWN.

	* configure.ac (AM_PROG_CC_C_O): Removed.

	* jartool.c (end_of_entries): Moved field to ...

	* shift.c (end_of_entries): ... here. New field.
	(shift_up, shift_down) Removed declarations of
	end_of_entries.

	* shift.h (end_of_entries): Added field to 
	exported header as it is used in jartool.c.

	* Makefile.in, aclocal.m4, config.h.in, 
	configure: Regenerated.

2007-02-06  Wil Mahan  <wmahan@users.sourceforge.net>

	* jartool.c (list_jar): Fall back on 
	the method used for non-seekable files when 
	reading the central-header-end section does 
	not work, i.e. in archives with a zipfile 
	comment at the end.

	Patch taken from fastjar.sourceforge.net
	patch repository.

2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_INIT): Changed version 
	to 0.94-pre.

2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* NEWS: Updated with some of the information
	from the ChangeLog.

2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* fastjar.texi: -i works now.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Added comment
	for previous patch. Added check to ensure
	that the META-INF directory is not being
	indexed.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Replace '\0'
	character with '\n' before adding the 
	index to the jar file to avoid having
	a zero byte at the end of the index file.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c: Added 2007 to copyright years,
	and claimed my changes.
	(OPTION_STRING) -i takes an argument.
	(main) Set jarfile to the argument when option 
	-i is parsed. Modified help string when no