@@ -1,5 +1,13 @@
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* compress.c (init_compression, end_compression,
+	init_inflation): Added missing 'void' parameter type.
+
+	* jargrep.c (version): Added missing 'void' parameter
+	type.
+
+2007-02-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.h (__attribute__): Remove define.
 
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
